IN PROGRESS - issue KOKU-459: Iframe scrollbar problem https://partner.ixonos.com/browse/,DanaInfo=.ajlnh1yEqq0kKu-2249R48xw8,SSL+KOKU-459
* Fixed scrollbar problen in Jboss EPP portal (IE7)

--- a/common/koku-taskmanager/koku-taskmanager-portlet/src/main/webapp/css/main.CSS
+++ b/common/koku-taskmanager/koku-taskmanager-portlet/src/main/webapp/css/main.CSS
@@ -2,6 +2,11 @@
  * css file for task manager portlet
  * @Author: JinhuaChen
  */
+ 
+ /* JBoss EPP fix */
+.UIComponent .UIComponentBlock .PORTLET-FRAGMENT {
+	/* width: 100% !important; */	
+}
 
 #task-manager-wrap {
 	margin: 5px;
